2008-11-05  Mike Kestner  <mkestner@novell.com>

	* atk/atk-api-2.12.raw: regen
	* gtk/gtk-api-2.12.raw: regen
	* generator/Signal.cs: reinstate old custom marshaler generation and
	generate custom marshaling when 'manual' attr is set.
	* parser/gapi2xml.pl: set manual attr on sigs that have G_TYPE_POINTER
	parameters since the generic closure can't cope with them.

2008-11-05  Mike Kestner  <mkestner@novell.com>

	* gtk/Builder.custom: #if the new API for 2.14 for now so it
	doesn't get confused as stable API yet.

2008-11-04  Mike Gorse  <mgorse@novell.com>

	* glib/PtrArray.cs, glib/glue/ptrarray.c, glib/Makefile.am,
	  glib/glue/Makefile.am, glib/gtype.cs, generator/SymbolTable.cs,
	  generator/ReturnValue.cs: Add PtrArray.
	* glib/Marshaller.cs: Add PtrArrayToArray.

	* atk/Atk.metadata: Specify GetTarget return type.

	* atk/Object.custom, atk/glue/object.c: Support overriding
	  RefRelationSet.

2008-11-03  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.metadata:
	* gtk/StatusIcon.custom: Obsolete the duplicated properties.

2008-10-29  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs : custom marshaling hooks
	* glib/SignalClosure.cs : support for custom marshalers.

2008-10-28  Stephane Delcroix  <sdelcroix@novell.com>

	* gtk/Gtk.Metadata: hide ConnectSignals.

	* gtk/Builder.Custom: connect the signals, and the objects.
	GetObjectRaw method: allows very neat object inheritance.

2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>

	* glib/ListBase.cs: DataMarshal: create the right object for *Adapter
	list items.

2008-10-08  Mike Gorse  <mgorse@novell.com>

	* atk/Object.custom: Pass Handle in EmitChildrenChanged (fix critical)

2008-10-24  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: register IntPtr.

2008-10-22  Peter Johanson  <peter@peterjohanson.com>

	* gtk/TreeModelAdapter.custom:
	* gtk/TreeModelFilter.custom:
	* gtk/TreeModelSort.custom:
	* gtk/TreeStore.custom: Don't trigger any gtk+ critical