@@ -359,6 +359,21 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="Notify">
+      <MemberSignature Language="C#" Value="protected void Notify (string property_name);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="name" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Emits a GObject "notify" signal for the property specified by <paramref name="property_name" />.</summary>
+        <param name="property_name">the name of a property on the underlying GObject.</param>
+        <remarks>This method is used to notify consumers of the underlying GObject that something about the GObject property specified by <paramref name="property_name" /> has changed.</remarks>
+      </Docs>
+    </Member>
     <Member MemberName=".ctor">
       <MemberSignature Language="C#" Value="protected Object (IntPtr raw);" />
       <MemberType>Constructor</MemberType>
