@@ -1,3 +1,9 @@
+2008-11-14  Brad Taylor  <brad@getcoded.net>
+	
+	* glib/Object.cs: Bind g_object_notify.
+
+	* doc/en/GLib/Object.xml: Document new API.
+
 2008-11-05  Mike Kestner  <mkestner@novell.com>
 
 	* atk/atk-api-2.12.raw: regen
